Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -8,6 +8,7 @@
         procedure?](#what-is-the-sampling-procedure)
     -   [What is the significance
         level?](#what-is-the-significance-level)
+    -   [Adjustments during the Covid-19 pandemic](#adjustments-during-the-covid-19-pandemic)
     -   [Other noteworthy aspects](#other-noteworthy-aspects)
 
 # Introduction to Rwanda Labor Force Survey (RWA LFS)
@@ -43,6 +44,10 @@ The Rwanda LFS uses a rotation sampling design that differs between the 2016-201
 
 The harmonized datasets contain a weight variable that is meant to generate annual estimates at the district level. Quarterly level estimates can be made at the national level by replacing the do files with appropriate quarterly weight. Users can do this by following this guide. 
 
+## Adjustments during the Covid-19 pandemic
+
+There were adjustments made in the 2020 Rwanda LFS in response to the Covid-19 pandemic. Phone interviews were done for the May and November 2020 rounds, both of which comprise the same sampling group. Also, an abridged version was used in the May 2020 round where only basic household information and labor status were collected. For this reason, the Rwanda NIS recommends that full year estimates only be calculated for the few indicators available in the May round. 
+
 ## Other noteworthy aspects
 
 ### Household ID
@@ -53,13 +58,13 @@ The datasets received contain ID information. In the GLD project, we have create
 
 While the Rwanda LFS questionnaire remains largely unchanged over time, there were certain instances when the raw datasets do not contain the universe of variables implied by the questionnaire. These missing variables are detailed [here](Missing%20variables.md).
 
+### Deriving key employment variables
+
+The Rwanda LFS reports contain detailed guidance on how to calculate key employment variables, including labor status, underemployment, potential labor force and earnings. This process is documented [here](XXX.md).
+
 ### Minimum age for education and labor questions
 
 Education and labor questions were asked only for respondents aged 14 and above. This differs from the Rwanda NIS reports, which reports employment indicators for individuals aged 16 and above. Rwanda labor laws require that only individuals can only begin employment at the age of 16 but permitted apprenticeships for those between 13 and 15 years old.  
-
-### Adjustments during the Covid-19 pandemic
-
-There were adjustments made in the 2020 Rwanda LFS in response to the Covid-19 pandemic. Phone interviews were done for the May and November 2020 rounds, both of which comprise the same sampling group. Also, an abridged version was used in the May 2020 round where only basic household information and labor status were collected. For this reason, the Rwanda NIS recommends that full year estimates only be calculated for the few indicators available in the May round. 
 
 ### Employment: Industry Classification
 
