Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -42,7 +42,7 @@ The Rwanda LFS uses a rotation sampling design that differs between the 2016-201
 
 ## What is the significance level?
 
-The harmonized datasets contain a weight variable that is meant to generate annual estimates at the district level. Quarterly level estimates can be made at the national level by replacing the do files with appropriate quarterly weight. Users can do this by following this guide. 
+The harmonized datasets contain a weight variable that is meant to generate annual estimates at the district level. 
 
 ## Adjustments during the Covid-19 pandemic
 
