Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -15,7 +15,7 @@
 
 ## What is the RWA LFS?
 
-The Rwanda LFS has been conducted by the National Institute of Statistics of Rwanda since August 2016. Adopting the framework set by the 19th International Conference of Labor Statistics ("ICLS-19"), the questionnaire is aimed to gather information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, previous employment, own-use production of goods and services, and household assets.  Before 2019, it was a bi-annual survey conducted on February and August of the same year to capture seasonal changes in agriculture. Since then, it was rolled out as a quarterly survey that included additional rounds for May and November. Despite these changes, the questionnaire was unchanged with the exception of the May 2020 round where an abridged version was used.
+The Rwanda LFS has been conducted by the National Institute of Statistics (NIS) of Rwanda since August 2016. Adopting the framework set by the 19th International Conference of Labor Statistics ("ICLS-19"), the questionnaire is aimed to gather information on household roster characteristics, education, employment, primary and secondary economic activities in the past week, previous employment, own-use production of goods and services, and household assets.  Before 2019, it was a bi-annual survey conducted on February and August of the same year to capture seasonal changes in agriculture. Since then, it was rolled out as a quarterly survey that included additional rounds for May and November. Despite these changes, the questionnaire was unchanged with the exception of the May 2020 round where an abridged version was used.
 
 ## What does the RWA LFS cover?
 
