Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -50,6 +50,14 @@ There were adjustments made in the 2020 Rwanda LFS in response to the Covid-19 p
 
 ## Other noteworthy aspects
 
+### Definition of concept of employment
+
+Since the passing of the [resolution concerning statistics of work, employment and labour underutilization](https://www.ilo.org/global/statistics-and-databases/standards-and-guidelines/resolutions-adopted-by-international-conferences-of-labour-statisticians/WCMS_230304/lang--en/index.htm) in 2013 at the 19th International Conference of Labour Statisticians (ICLS) surveys are at risk of a series break due to the change in the concept of employment.
+
+In short, the ICLS 19 resolution restricts employment to *work performed for others in exchange for pay or profit*, meaning that own consumption work (e.g., subsistence agriculture or building housing for oneself) are not counted as employment.
+
+The GLD codes the harmonization’s `lstatus’ variable based on the concept used in the survey. This has been the case for all years in the Rwanda LFS. Nonetheless, it possible to alter the code so that it matches the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
+
 ### Household ID
 
 The datasets received contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the primary sampling unit and household identifier. 
