Update 1. Introduction to RWA LFS.md

--- a/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
+++ b/Support/B - Country Survey Details/RWA/LFS/1. Introduction to RWA LFS.md
@@ -68,7 +68,7 @@ While the Rwanda LFS questionnaire remains largely unchanged over time, there we
 
 ### Deriving key employment variables
 
-The Rwanda LFS reports contain detailed guidance on how to calculate key employment variables, including labor status, underemployment, potential labor force and earnings. This process is documented [here](XXX.md).
+The Rwanda LFS reports contain detailed guidance on how to calculate key employment variables, including labor status, underemployment, potential labor force and earnings. This process is documented [here](Deriving%20employment%20variables.md).
 
 ### Minimum age for education and labor questions
 
@@ -82,4 +82,6 @@ The Rwanda LFS follows a customized version of the ISIC version 4 called CISIC (
 
 The Rwanda LFS follows a customized version of the ISCO 2008 called CISCO (see [here](utilities/RWA_CISCO.pdf)). However, there were codes that cannot be found in both the CISCO and ISCO 2008. The closest digit available was used when coding ISCO correspondence. For example, occupation code "2213" was mapped to "2200" since no valid ISCO code can be found for the 3-digit equivalent, "2210". 
 
+### Wages
 
+The wage variable in the GLD, `wage_no_compen` uses all available information to estimate household income from primary employment. Generally, the datasets include earnings in-cash, in-kind, and net business income. Also, when households cannot provide an point estimate of income, they are made to choose where they think their income is likely to fall across different ranges of monthly income values. However, there are specific years where estimating full income is not possible. In 2018, data is only available income earned in cash among respondents aged 16 and above; and in 2019, no income data is available in the retrieved raw dataset. For more information in harmonizing `wage_no_compen`, refer to  this [separate document](Deriving%20employment%20variables.md).
