--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -81,10 +81,14 @@ Mapping educational achievement is tricky for Ethiopia, due to the convoluted ca
 
 ### Helper files for region, zone and wereda naming
 
-We created several codelist for `subnatid2` and `subnatid3` according to CSA's codebooks of EA. These files and their use can be found in the table below.
-
+We created a codelist for `subnatid2` and `subnatid3` according to CSA's codebooks of EA for 2021. This is file needs to be used along with the harmonization codes of 2021 to complete the harmonization process. Commonly one zone represents one zone, meaning has one zone name. But kindly be noted that there are two zone codes with two different zone names each:
+1)  0401 - Oromia-Mirab Wollega 
+    0401 - Oromia-Misrak Wollega 
+2)  0601 - Benishangul-Gumuz-Assosa     
+    0601 - Benishangul-Gumuz-Metekel
+    
+These cases exist in the original document shared with us by CSA so we could not figure out the reason of having different zone names by one same zone code.      
+    
 | **Document**	| **Description**	| **Referrence**|
 | :---------:	| :-------------: | :-----------: |   
-| [ETH_zone_naming_1999](utilities/Additional%20Data/ETH_zone_naming_1999.dta) | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 1999.| [LFS Annual Report 1999](utilities/ETH_1999_LFS_report.pdf)|    
-| [ETH_zone_naming_2005](utilities/Additional%20Data/ETH_zone_naming_2005.dta)  | A code list containing the codes and names of Ethiopia's second-level administrative division, zone. It was used for harmonizing the GLD variable "subnatid2" for 2005.|[LFS Rural Codebook 2005](utilities/2005LFS_Rural_Codebook.pdf), [LFS Urban Codebook 2005](utilities/2005LFS_Urban_Codebook.pdf) |
 | [ETH_subnatid_2021](utilities/Additional%20Data/ETH_2021_subnatid_codebook.dta)  | A comprehensive code list containing the codes and names of region, zone, wereda, town, kebele, and enumeration area in Ethiopia. It was used for harmonizing the GLD variable `subnatid2` and `subnatid3` for 2021.|[LFS Codebook 2021](utilities/CODEBOOK_2021_LMS.xlsx)|    
