Update 1. Introduction to THA LFS.md

--- a/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
+++ b/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
@@ -159,4 +159,4 @@ The Thailand LFS occupation data followed the coding from the international clas
 
 ### Urban population estimates
 
-Although the LFS has the potential to provide estimates of the urban population in Thailand, it's important to note that there are certain limitations to using this data for such purposes. We have detailed these caveats in a [separate document here](Urban%20population).
+Although the LFS has the potential to provide estimates of the urban population in Thailand, it's important to note that there are certain limitations to using this data for such purposes. We have detailed these caveats in a [separate document here](Urban%20population.md).
