Add note on TUR 2014 on only ages 15+

--- a/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
+++ b/Support/B - Country Survey Details/TUR/HLFS/1. Introduction to HLFS.md
@@ -64,6 +64,10 @@ The raw datasets come with ID information masked due to privacy reasons. In the 
 
 TURKSTAT developed the 2000-2013 surveys with a variable for urban, rural categories. However, the 2014-2019 survey do not have a variable for urbanization categories. Further information about this change can be accessed in the press releases from 2014-onwards.
 
+### Minimum age in the survey
+
+The data used in the GLD changes in terms of the age of respondents. Data prior to 2013 includes respondents of all ages, skipping younger respondents for the work section. However, from 2014 onwards the data only contains respondents 15 years of age and older. That means that the total population cannot be estimated from the data as of 2014.
+
 ### Education
 
 The education section of the harmonized dataset was developed using the NSO raw dataset. However, in the harmonization process, the team noted that the education levels changed between 2000 and 2014. The changes in the education system affected the code used in the GLD harmonization process, as a result, the team decided to create a separate page to explain the peculiarities of the education section and the decisions made by the team that resulted in the variables of the harmonized dataset. Please, use the following [link](/Support/B%20-%20Country%20Survey%20Details/TUR/HLFS/Education.md) to get more details.
