--- a/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
+++ b/Support/B - Country Survey Details/MEX/ENOE/1. Introduction to ENOE.md
@@ -37,7 +37,7 @@ The Mexican ENOE is a labour force survey collecting information on demographic 
 
 ## Where can the data be found?
 
-The microdata is free and publicly available on the National Institute of Statistics and Geography (INEGI). INEGI created a [dedicated website](https://www.inegi.org.mx/programas/enoe/15ymas/#Microdatos) that records ENOE and all previous versions, besides it contains complete information to understand the framework of the ENOE. Data from 2019 onwards can only be circulated within the World Bank. For further information kindly get in touch with the World Bank Jobs Group. 
+The microdata is free and publicly available on the National Institute of Statistics and Geography (INEGI). INEGI created a [dedicated website](https://www.inegi.org.mx/programas/enoe/15ymas/#Microdatos) that records ENOE and all previous versions, besides it contains complete information to understand the framework of the ENOE. Data from 2019 onwards can only be circulated within the World Bank. For further information kindly get in touch with the World Bank Jobs Group.
 
 ## What is the sampling procedure?
 
@@ -53,7 +53,7 @@ Image 1. Steps to find the information in the webpage
 <br></br>
 ![](utilities/ENOE_intro3.png)
 <br></br>
-Reference: Screenshots from ENOE- INEGI webapage. Further details in *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/) 
+Reference: Screenshots from ENOE- INEGI webapage. Further details in *Encuesta Nacional de Ocupación y Empleo* under the ["recent version"](https://www.inegi.org.mx/programas/enoe/15ymas/)
 
 
 [Summarized Translation from the original version]
@@ -70,7 +70,13 @@ Reference: Screenshots from ENOE- INEGI webapage. Further details in *Encuesta N
 
 The results are at national, state, and *cities of interest* levels as well as for certain size categories of localities. The cities of interest and sizes of cities, however, may vary over time. It is thus important to check the individual methodology reports. The information on the 2019 ENOE can be found under section 3.3 (page 39/40) of [that year's report](https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825190613).
 
-## Other Noteworthy Aspects 
+## Other Noteworthy Aspects
+
+### Change in the name of Mexico's capitals
+
+Variable `subnatid1` defines the first administrative unit, which are the states in Mexico's case. Mexico's capital, technically not a state (the precise discussion is omitted here), has throughout the dataset a distinct code, namely code 9.
+
+However, in [2016 the name changed officially](https://dof.gob.mx/nota_detalle.php?codigo=5424565&fecha=05/02/2016) from "Distrito Federal" to "Ciudad de México". As such the `subnatid1` variable changed from "9 - Distrito Federal" (code up to and including 2015) to "9 - Ciudad de México" (from 2016 on). This is also covered by the variable `subnatid1_prev` in 2016.
 
 ### Evolution of the ENOE questionnaires
 
@@ -103,15 +109,15 @@ Questionnaires](https://www.inegi.org.mx/programas/enoe/15ymas/)
 
 ### Information used in the GLD harmonization
 
-Since ENOE reports quarterly results using different questionnaires, the 
-harmonization team choose between annualizing quarterly results or choosing 
-one quarter with mostly similar questionnaire questions. The fact that there 
-is no unique questionnaire for the entire year introduces seasonality in 
+Since ENOE reports quarterly results using different questionnaires, the
+harmonization team choose between annualizing quarterly results or choosing
+one quarter with mostly similar questionnaire questions. The fact that there
+is no unique questionnaire for the entire year introduces seasonality in
 the input, which could impact the process of data analysis for the user.
 
-Annualizing data means that the results from extended and basic version 
-questionnaires would merge which may cause lose of information. In table 2. 
-the team summarized the list of absent topics in the extended and 
+Annualizing data means that the results from extended and basic version
+questionnaires would merge which may cause lose of information. In table 2.
+the team summarized the list of absent topics in the extended and
 the basic questionnaire versions.
 
 | Extended Version                                                                               | Basic Version                                                                                                                    |
@@ -121,9 +127,9 @@ the basic questionnaire versions.
 
 ### Coding of industry and occupation codes
 
-The ENOE codes occupation based on the "Mexican Classification of Occupations" (Clasificación Mexicana de Ocupaciones - CMO) from 2005 to 2012 and from 2013 to 2020 on the "National System of Classification of Occupations" (Sistema Nacional de Clasificación de Ocupaciones - SINCO). These are mapped to ISCO-08. 
+The ENOE codes occupation based on the "Mexican Classification of Occupations" (Clasificación Mexicana de Ocupaciones - CMO) from 2005 to 2012 and from 2013 to 2020 on the "National System of Classification of Occupations" (Sistema Nacional de Clasificación de Ocupaciones - SINCO). These are mapped to ISCO-08.
 
-On the industry side, ENOE codifies industry over the years based on four different versions of the North American System of Industrial Classification (Sistema de Clasificación Industrial de América del Norte - SCIAN), namely the 2007 versions, all data is mapped to ISIC-4. 
+On the industry side, ENOE codifies industry over the years based on four different versions of the North American System of Industrial Classification (Sistema de Clasificación Industrial de América del Norte - SCIAN), namely the 2007 versions, all data is mapped to ISIC-4.
 
 The table below provides an overview of the different versions underlying the survey as well as what version they have been mapped to. The precise details of how the mapping was done is covered [here in a separate document on occupations](Correspondence_occup_ISCO.md) as well as [here on industry classification](Correspondence_NAICS_ISIC.md).
 
@@ -147,8 +153,8 @@ The table below provides an overview of the different versions underlying the su
 | 2019			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
 | 2020			| SINCO 2011			| ISCO-08	| SCIAN 2007			| ISIC-4	|
 
-## Relevant information from INEGI on the ISIC codes used by ENOE
+### Relevant information from INEGI on the ISIC codes used by ENOE
 
-Please check the following [document](https://github.com/worldbank/gld/blob/1ff9697fbfe571a1b95c6d10c4f8ce5e0d6a7568/Support/B%20-%20Country%20Survey%20Details/MEX/ENOE/utilities/Comentario%20aplicado%20a%20la%20versi%C3%B3n%202(spa-eng).pdf) to get more insight on the ENOE SCIAN codes and the meaning of the digits used in the raw data. 
+Please check the following [document](https://github.com/worldbank/gld/blob/1ff9697fbfe571a1b95c6d10c4f8ce5e0d6a7568/Support/B%20-%20Country%20Survey%20Details/MEX/ENOE/utilities/Comentario%20aplicado%20a%20la%20versi%C3%B3n%202(spa-eng).pdf) to get more insight on the ENOE SCIAN codes and the meaning of the digits used in the raw data.
 
 Further information or questions about the microdata in this webpage can be directed to [World Bank GLD Focal Point](mailto:gld@worldbank.org).
