Add empstat alt
Add code to make empstat_alt that differentiates between regular and casual employees.

Add introduction CSD files and link to the files.

--- a/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
+++ b/Support/B - Country Survey Details/IND/EUS/1. Introduction to EUS.md
@@ -9,12 +9,12 @@
 
 ## What is the IND EUS?
 
-The EUS is the national comprehensive labour force survey, carried out by the [National Sample Survey](http://www.mospi.nic.in/national-sample-survey-nss). It was implemented 10 times from 1983 to 2011. All surveys ran from July of the first year to June of the following (e.g., July 1983 to June 1984) except for the [60th round](http://microdata.gov.in/nada43/index.php/catalog/106) which ran from January 2004 to June 2004. 
+The EUS is the national comprehensive labour force survey, carried out by the [National Sample Survey](http://www.mospi.nic.in/national-sample-survey-nss). It was implemented 10 times from 1983 to 2011. All surveys ran from July of the first year to June of the following (e.g., July 1983 to June 1984) except for the [60th round](http://microdata.gov.in/nada43/index.php/catalog/106) which ran from January 2004 to June 2004.
 
 ## What does the EUS cover?
 
 The EUS was implemented 10 times between 1983covers household characteristics, individual demographic and education characteristics of respondents, as well as labour market information both over the past 12 months and over the 7 days prior to interview. Additionally, different iterations of the EUS have added modules on migration, household expenditure, and recent changes in employment. For example, only the 1983, 1987, 1999, and 2007 surveys contain a migration module.
-The years 1987 to 2011 have been harmonized to GLD standard (1983 is in the works). The aforementioned 60th round from January to June 2004 was not harmonized as the 61st round took place from July 2004 to June 2005 and is in line with the other surveys and covers the same year. 
+The years 1987 to 2011 have been harmonized to GLD standard (1983 is in the works). The aforementioned 60th round from January to June 2004 was not harmonized as the 61st round took place from July 2004 to June 2005 and is in line with the other surveys and covers the same year.
 
 The below table shows the survey years harmonized and the size of the sample in terms of households and individuals.
 
@@ -48,7 +48,7 @@ The official reports detail results jointly by sex, sector (urban or rural), and
 ## Other noteworthy aspects
 
 ### Difference from reported population
-Sample sizes and expanded population (that is the total population estimated using the weights) are compared to the reported data by the Ministry of Statistics and Programme Implementation (MOSPI) for all years. They match exactly the published numbers except for 1999. 
+Sample sizes and expanded population (that is the total population estimated using the weights) are compared to the reported data by the Ministry of Statistics and Programme Implementation (MOSPI) for all years. They match exactly the published numbers except for 1999.
 
 The table below shows the difference between published data and the data in the GLD harmonization. Note that MOSPI reports expanded population only to the nearest hundred, rounding by the next number (i.e., 427,149 would be rounded to 1, not to 427,100, not 427,200).
 
@@ -69,7 +69,7 @@ The report on the first PLFS from 2017 compares the sampling methodologies for t
 
 ### Coding of industry and occupation codes
 
-The EUS codes occupation based on the Indian National Occupation classification (NOC) and industry based on the National Industry classification. Different survey editions use different iterations of the NOC and NIC, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). 
+The EUS codes occupation based on the Indian National Occupation classification (NOC) and industry based on the National Industry classification. Different survey editions use different iterations of the NOC and NIC, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC).
 The details on the process of creating the correspondence between national and international classifications [are covered here in a separate document](Correspondence_National_International_Classifications.md). The table below shows the overview of the underlying version of the national classification and what version of the international they have been matched to.
 
 | Year of survey	| NCO version	| ISCO version	| NIC version	| ISIC version	|
@@ -88,7 +88,7 @@ The details on the process of creating the correspondence between national and i
 
 In the year 1987, Daman and Diu was split off from Goa and in 2000 three new states were created: Chhattisgarh out of districts previously part of Madhya Pradesh, Uttarakhand (formerly Uttaranchal) out of districts previously part of Uttar Pradesh, and Jharkhand out of districts previously part of Bihar.
 
-The details of this process are [covered further in a separate document](Changes_States_And_State_Codes_Over_Time.md). 
+The details of this process are [covered further in a separate document](Changes_States_And_State_Codes_Over_Time.md).
 The 1999 survey (NSS round 55) started in July 1999 and ended in June 2000 and is the last to use the old state definitions. Thus, surveys before 1993 have 31 distinct state codes, surveys between 1993 and 1999 have 32 distinct state codes, while surveys from 2004 have under `subnatid1`.
 
 
@@ -96,6 +96,10 @@ The 1999 survey (NSS round 55) started in July 1999 and ended in June 2000 and i
 
 The EUS does not directly ask respondents about their employment but rather asks about *usual principal activity* and their *subsidiary economic activity*. In such a situation, a full-time university student who works on the weekends at a petrol station, for example, would classify their principal activity as student. If we were to use only principal activity, we would code this individual as out of the labour force, missing the fact that they are employed as per their subsidiary economic activity.
 
-Moreover, the EUS asks employment questions both over the 12-month and the 7-day recall period. Some employment codes (e.g., differentiating between unemployed who is looking for a job and available to work or just available to work but not looking), are only available for one of the recall periods. 
+Moreover, the EUS asks employment questions both over the 12-month and the 7-day recall period. Some employment codes (e.g., differentiating between unemployed who is looking for a job and available to work or just available to work but not looking), are only available for one of the recall periods.
 
 The details of these definitions are [covered separately in another document](Definitions_of_employment_over_recall_periods.md)
+
+### Definitions of employment status
+
+The harmonization used for GLD only has one category for paid employees. However, the EUS has different codes for so called "regular" and "casual" employees, denoting a tighter and a more lose relationship to the employer in either case. Commonly casual employees will earn less and be in a less formal setting. Differentiating between these types of employment may be useful to researchers. The GLD team has created codes to run on the raw data that create an alternative `empstat` called `empstat_alt`. The datafile created only has variables `empstat_alt` and `pid`, where the latter can be used to merge it with the regular harmonization. The [codes can be found here](utilities/Code%20for%20creating%20alternative%20empstat).
