--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -83,3 +83,7 @@ Code 11 stands for the self-employed, while code 12 represents employers. Codes 
 The annual report (see [here the report for the 2019/20 PLFS](utilities/Annual_Report_PLFS_2019_20.pdf)) documents these earnings in separate tables. In addition, the daily earnings can be summarized to a weekly wage for casual wage workers in public works other than MGNREG (Mahatma Gandhi National Rural Employment Guarantee Act) (code 41), casual workers in MGNREG works (code 42), or in other types of works.
 
 These wages are reported only as daily wages. It seems safe to summarise this into a weekly wage, but the Indian Authorities do not try to compare the two by for example dividing monthly earnings by 4.3. Hence attention should be given to extracting the correct information from the survey when calculating wages. Annualising casual workers earnings to a month or a year will likely result in an overestimate of their income.
+
+### Definitions of employment status
+
+The harmonization used for GLD only has one category for paid employees. However, the PLFS has different codes for so called "regular" and "casual" employees, denoting a tighter and a more lose relationship to the employer in either case. Commonly casual employees will earn less and be in a less formal setting. Differentiating between these types of employment may be useful to researchers. The GLD team has created codes to run on the raw data that create an alternative `empstat` called `empstat_alt`. The datafile created only has variables `empstat_alt` and `pid`, where the latter can be used to merge it with the regular harmonization. The [codes can be found here](utilities/Code%20for%20creating%20alternative%20empstat).
