Update 1. Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -133,3 +133,10 @@ We created several codelist for `subnatid2`, `migrated_from_code`, and `vocation
 | [PAK_training_code](utilities/Additional%20Data/PAK_training_code.dta)  | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for years 2009-2018.|[Training pre-2020](utilities/Additional%20Data/MANUAL%202018-19.pdf)|
 | [PAK_training_code_2020](utilities/Additional%20Data/PAK_training_code_2020.dta) | A code list containing the codes and names of the type of vocational training. It was used for harmonizing GLD variable "vocational_field_orig" for 2020.|[Training 2020](utilities/Additional%20Data/List_of_Technical_Vocational_Training_Courses.pdf)|    
 | [PAK_subnatid2_code_2020](utilities/Additional%20Data/PAK_subnatid2_code_2020.dta)  |A code list containing three-digit codes and names of districts covered in the raw dataset for 2020. It was used for harmonizing the GLD variable "subnatid2".|[District](utilities/Additional%20Data/Coding_Scheme_LFS_2020-21_Districts_Codes.pdf)|
+
+
+### Original weights vs. inflated weights
+
+Some years (2010, 2012, 2013, and 2014) all have two weighting variables, usually `weights` and `new_weight` in the raw datasets. The `new_weight` is usually 1.1 times of `weights`. Although there is no explanation of why there are two weighting variables, it seems that the `new_weight` is an inflated version of `weights` to adjust the expanded popuation so as to match the population in LFS annual reports. 
+
+In the same sense,  we have inflated the `weights` in 2017 by 1.11, which is the ratio of the reported population (206,628,940) and the expanded population (185,760,595) using the original `weights`. In this way, we can match the population in the report.
