--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -1,5 +1,5 @@
 
--   [Introduction to Bangladesh Labor Force Survey (THA
+-   [Introduction to Bangladesh Labor Force Survey (BGD
     LFS)](#introduction-to-bangladesh-labor-force-survey-bgd-lfs)
     -   [What is the BGD LFS?](#what-is-the-bgd-lfs)
     -   [What does the BGD LFS cover?](#what-does-the-bgd-lfs-cover)
@@ -14,92 +14,22 @@
 
 ## What is the BGD LFS?
 
-The Bangladesh LFS has been conducted by the Bangladesh Bureau of Statistics since 1980.  It provides information about employment, industry, occupation, work hours, educational attainment and demographic characteristics in Thailand.
+The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. In its early years, the survey was conducted mostly on an annual basis, but in recent years, it has become less frequent. 
+
+The GLD team has harmonized data for the five most recent rounds: 2005-06, 2010, 2013, 2015-16, and 2016-17. In the latest two rounds (2015-16 and 2016-17), the surveys were renamed as the Quarterly Labor Force Survey (QLFS), providing data on a quarterly basis to offer a more detailed understanding of labor market dynamics. Additionally, the questionnaire was updated to gather information on the own-use production of goods and services, a crucial aspect of the informal labor market and subsistence activities in Bangladesh.
 
 ## What does the BGD LFS cover?
 
 The Bangladesh LFS is a labor force survey with information on demographic characteristics, education, and labor market activities over the past 7 days. The harmonized years and sample sizes used in the GLD harmonization are as follows:
+| Year | HH count | Individual count |
+|---|---|---|
+| 2005 |          40,000  |                      188,487  |
+| 2010 |          43,949  |                      199,274 |
+| 2013 |          36,242  |                      156,987  |
+| 2015-16 |          121,082  |                      503,756  |
+| 2016-17 |          122,455|                      493,886  |
 
-**Individual counts**
-| Year |      Q1     |       Q2      |       Q3      |     Q4     |   Full Year  |
-|------|:-----------:|:-------------:|:-------------:|:----------:|:------------:|
-| 1985 |     74,287  |       80,021  |       78,214  |            |     232,522  |
-| 1986 |             |     82,946    |     77,092    |            |   160,038    |
-| 1987 |     71,510  |     78,035    |     69,552    |            |   219,097    |
-| 1988 |     72,915  |               |     71,579    |            |   144,494    |
-| 1989 |     98,771  |   102,781     |     95,448    |            |   297,000    |
-| 1990 |             |               |     89,993    |            |     89,993   |
-| 1991 |     92,864  |     98,987    |     93,305    |            |   285,156    |
-| 1992 |     92,694  |     97,229    |     90,876    |            |   280,799    |
-| 1993 |     87,641  |               |     85,899    |            |   173,540    |
-| 1994 |   183,892   |     82,839    |   177,821     |            |   444,552    |
-| 1995 |   176,581   |               |   176,130     |            |   352,711    |
-| 1996 |   128,990   |     59,003    |   126,079     |            |   314,072    |
-| 1997 |   175,949   |               |   175,298     |            |   351,247    |
-| 1998 |   170,865   |     79,748    |   167,469     |   182,525  |   600,607    |
-| 1999 |   167,503   |   180,712     |   164,832     |   178,512  |   691,559    |
-| 2000 |   164,636   |   176,684     |   161,834     |   176,684  |   679,838    |
-| 2001 |   215,852   |   223,814     |   207,899     |   222,991  |   870,556    |
-| 2002 |   220,049   |   213,175     |   210,264     |   213,250  |   856,738    |
-| 2003 |   213,993   |   207,320     |   206,371     |   211,720  |   839,404    |
-| 2004 |   209,922   |   208,042     |   203,810     |   210,103  |   831,877    |
-| 2005 |   212,006   |   207,533     |   208,952     |   208,835  |   837,326    |
-| 2006 |   210,929   |   216,016     |   222,224     |   230,030  |   879,199    |
-| 2007 |   228,409   |   221,531     |   219,538     |   222,897  |   892,375    |
-| 2008 |   224,859   |   222,613     |   225,406     |   226,905  |   899,783    |
-| 2009 |   225,578   |   224,076     |   220,704     |   223,860  |   894,218    |
-| 2010 |   223,592   |   223,341     |   147,718     |   221,167  |   815,818    |
-| 2011 |   227,436   |   228,459     |   227,216     |   215,720  |   898,831    |
-| 2012 |   218,072   |   226,889     |   239,255     |            |   684,216    |
-| 2014 |   213,176   |   222,556     |   232,710     |   221,279  |   889,721    |
-| 2015 |   209,582   |   218,289     |   229,332     |   219,433  |   876,636    |
-| 2016 |   210,216   |   220,055     |   230,798     |   215,997  |   877,066    |
-| 2017 |   207,482   |   219,256     |   227,229     |   213,746  |   867,713    |
-| 2018 |   202,450   |   214,949     |   222,537     |   209,747  |   849,683    |
-| 2019 |   201,976   |   210,335     |   215,707     |   205,256  |   833,274    |
-| 2020 |   199,641   |   210,175     |   220,672     |   209,671  |   840,159    |
-| 2021 |   200,956   |   209,894     |   217,471     |   206,991  |   835,312    |
-
-**Household counts**
-| Year |       Q1       |       Q2       |       Q3       |       Q4       |     Full Year     |
-|------|:--------------:|:--------------:|:--------------:|:--------------:|:-----------------:|
-| 1985 |        17,239  |        17,366  |        17,951  |                |           52,556  |
-| 1986 |                |        17,655  |        18,345  |                |           36,000  |
-| 1987 |        17,065  |        17,230  |        16,718  |                |           51,013  |
-| 1988 |        17,045  |                |        16,919  |                |           33,964  |
-| 1989 |        24,257  |        23,975  |        23,725  |                |           71,957  |
-| 1990 |                |                |        22,618  |                |           22,618  |
-| 1991 |        23,998  |        24,204  |        24,292  |                |           72,494  |
-| 1992 |        24,713  |        24,657  |        24,401  |                |           73,771  |
-| 1993 |        23,735  |                |        23,435  |                |           47,170  |
-| 1994 |        50,654  |        21,522  |        49,312  |                |        121,488    |
-| 1995 |        49,287  |                |        49,183  |                |           98,470  |
-| 1996 |        49,423  |        21,033  |        48,650  |                |        119,106    |
-| 1997 |        48,400  |                |        48,611  |                |           97,011  |
-| 1998 |        48,422  |        21,186  |        47,768  |        49,077  |        166,453    |
-| 1999 |        48,123  |        49,161  |        47,671  |        49,175  |        194,130    |
-| 2000 |        47,911  |        48,824  |        47,562  |        48,824  |        193,121    |
-| 2001 |        63,038  |        62,822  |        61,584  |        63,083  |        250,527    |
-| 2002 |        63,598  |        62,342  |        62,448  |        62,947  |        251,335    |
-| 2003 |        62,923  |        61,131  |        61,283  |        62,006  |        247,343    |
-| 2004 |        61,960  |        61,383  |        61,179  |        62,645  |        247,167    |
-| 2005 |        63,361  |        62,061  |        62,890  |        62,792  |        251,104    |
-| 2006 |        63,839  |        65,911  |        68,172  |        70,157  |        268,079    |
-| 2007 |        69,762  |        68,041  |        68,072  |        68,422  |        274,297    |
-| 2008 |        69,089  |        68,783  |        70,058  |        70,436  |        278,366    |
-| 2009 |        69,884  |        69,382  |        68,630  |        69,452  |        277,348    |
-| 2010 |        69,604  |        69,716  |        46,690  |        69,523  |        255,533    |
-| 2011 |        76,500  |        79,858  |        79,980  |        68,905  |        305,243    |
-| 2012 |        73,883  |        73,536  |        73,652  |                |        221,071    |
-| 2014 |        73,972  |        73,983  |        73,390  |        73,281  |        294,626    |
-| 2015 |        73,820  |        73,502  |        73,086  |        73,068  |        293,476    |
-| 2016 |        74,035  |        74,218  |        73,770  |        72,949  |        294,972    |
-| 2017 |        74,113  |        74,332  |        73,456  |        72,788  |        294,689    |
-| 2018 |        73,738  |        74,428  |        73,560  |        73,204  |        294,930    |
-| 2019 |        74,513  |        74,155  |        73,103  |        72,895  |        294,666    |
-| 2020 |        74,502  |        73,970  |        73,892  |        72,973  |        295,337    |
-| 2021 |        74,981  |        74,865  |        73,422  |        73,286  |        296,554    |
-
+During the 2015-16 and 2016-17 rounds, the Bangladesh LFS implemented a rotational sampling design, in which individuals were interviewed for two consecutive quarters before being replaced. For these two rounds, the table above presents household and individual frequency data distinctively for each quarter.
 
 ## Where can the data be found?
 
