Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -14,9 +14,7 @@
 
 ## What is the BGD LFS?
 
-The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. In its early years, the survey was conducted mostly on an annual basis, but in recent years, it has become less frequent. 
-
-The GLD team has harmonized data for the five most recent rounds: 2005-06, 2010, 2013, 2015-16, and 2016-17. In the latest two rounds (2015-16 and 2016-17), the surveys were renamed as the Quarterly Labor Force Survey (QLFS), providing data on a quarterly basis to offer a more detailed understanding of labor market dynamics. Additionally, the questionnaire was updated to gather information on the own-use production of goods and services, a crucial aspect of the informal labor market and subsistence activities in Bangladesh.
+The Bangladesh Labor Force Survey (LFS), initiated by the Bangladesh Bureau of Statistics (BBS) in 1980, has been carried out at irregular intervals over the years. The GLD team has harmonized data for the five most recent rounds: 2005-06, 2010, 2013, 2015-16, and 2016-17. In the latest two rounds (2015-16 and 2016-17), the surveys were renamed as the Quarterly Labor Force Survey (QLFS), providing data on a quarterly basis to offer a more detailed understanding of labor market dynamics. Additionally, the questionnaire was updated to gather information on the own-use production of goods and services, a crucial aspect of the informal labor market and subsistence activities in Bangladesh.
 
 ## What does the BGD LFS cover?
 
