Update 1. Introduction to BGD LFS.md

--- a/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
+++ b/Support/B - Country Survey Details/BGD/LFS/1. Introduction to BGD LFS.md
@@ -35,28 +35,25 @@ The datasets are not accessible to the public and researchers have to request th
 
 ## What is the sampling procedure?
 
-The LFS is designed as a stratified two-stage sampling survey. Bangkok Metropolis and the 76 provinces constituted the strata. The strata were each divided by municipal and non-municipal area. The primary sampling units were the enumeration areas for municipal and non-municipal areas. The secondary sampling units were the private households and persons in the collective households. From 2011 onwards, the sampling frame is based on the 2010 census.
+The Labor Force Survey (LFS) in Bangladesh employs a two-stage stratified sampling design to gather representative data on the country's labor force. This sampling methodology involves selecting Primary Sampling Units (PSUs) in the first stage and households within each PSU in the second stage. Both stages employ random selection techniques, ensuring the sample's representativeness. In the 2015-16 and 2016-17 rounds, the LFS implemented a rotational panel strategy, where some households in each cluster were replaced by new ones every two quarters.
 
-Since 2002, the Thailand LFS adopted a [rotation sampling design](utilities/THA_LFS_methodology.pdf). The sampling plan is designed with 4 rotation groups with a 2-2-2 pattern. The samples of villages are divided into 4 rotation groups, which result in the number of PSUs in a province to be equal to a one-fourth of the that of total PSUs. Two household sample sets are selected in each PSU and each is interviewed for two rounds of the survey. This results in the repetition of sample households for two quarters. Beginning 2011, a new rotation was pattern was adopted where the primary sampling units are divided into 11 PSU sets, and 4 sets of households were selected to give a total of 44 household sample sets. 
+In 2010, the LFS updated its frame to improve the quality and reliability of the estimates. Before then, the LFS utilized the Integrated Multipurpose Sample (IMPS) design, which consisted of 1,000 PSUs covering both rural and urban areas. However, as the IMPS areas became outdated, the LFS transitioned to an updated Master Sampling Frame in 2010. This new design was based on the 2001 Population Census enumeration areas and expanded the number of PSUs to 1,500, increasing the number of surveyed households.
+
 
 ## What is the significance level?
 
-The official reports detail results by gender, area of residence (urban or rural), and region. However, between 1985 and 1997, the data is designed to generate national level estimates.
+The official reports detail estimates by area of residence (urban or rural), and division. 
 
 ## Other noteworthy aspects
 
 ### Household ID
 
-The datasets received do not contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on region, province, area of residence or sector, district, village block number, and household number. 
+The datasets received do not contain ID information. In the GLD project, we have created IDs to provide the best user experience based on geographic identifiers. The household ID is formed based on information on the primary sampling unit and the household identification number. 
 
 ### Geographic Information
 
-In 2001, the Thailand LFS changed the area of residence categories to urban and rural. Prior to that, areas of residence are categorized as municipal, non-municipal and sanitary areas. In the GLD harmonization, urban areas are mapped to municipal areas, while rural areas are mapped to non-municipal and sanitary areas. More details in a [separate document here](Geographic%20codes.md)
+Bangladesh is composed of eight administrative divisions: Dhaka, Chittagong, Khulna, Barisal, Rajshahi, Sylhet, Rangpur, and Mymensingh. The LFS series has not yet incorporated Mymensingh, which was established in 2015, even though it was already a separate division during the last two rounds. In the 2013 LFS, Rangpur was included as an independent division following its creation in 2010. This division comprises eight districts that were previously under Rajshahi's jurisdiction: Rangpur, Dinajpur, Gaibandha, Kurigram, Lalmonirhat, Nilphamari, Panchagarh, and Thakurgaon.
 
-
-### Minimum age for education, migration and employment questions
-
-Since 2001, the education and employment questions are asked only for respondents aged 15 and above. Between 1995 and 2000, the questions (including those for migration module) are asked for 13 and above. Between 1985 and 1994, the employment and migration questions are asked for 11 and above. Meanwhile, the education questions are asked for 11 and above only between 1988 and 1994, and before then, it applied to ages 7 and above.
 
 ### Frequency of surveys and its impact on questionnaire design
 
