Update 1. Introduction to GEIH.md

--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -18,7 +18,8 @@ The Colombia GEIH is a household survey collecting information on age, sex, loca
 
 | Year	| # of Individuals 	| # of Households	|
 | :-------	| :--------		| :--------	 	|
-| 2006	|   316,976 | 	 82,530 |
+| 2007	|   838,421 |   221,048	|
+| 2008	|   823,814 | 	221,988 |
 | 2009	| 	815,480	| 	220,989	|
 | 2010	| 	821,951	| 	226,261	|
 | 2011	| 	827,522	| 	230,499	|
@@ -98,8 +99,15 @@ The DANE used a version of the international industry classification or ISIC  to
 
 | Year	| National classification| ISIC classification	|
 | :-------	| :--------		| :--------		| 
-|2006-2019| ISIC COLOMBIA AC 3 | ISIC REV 3.1 |
+|2007-2019| ISIC COLOMBIA AC 3 | ISIC REV 3.1 |
 | 2020-2021 |ISIC COLOMBIA AC 4| ISIC REV 4 |
+
+### Employed population 
+Please, note that the number of self employed has a jump between 2008 and 2009. This is in line with the ILO numbers. Visit [this](https://www.ilo.org/shinyapps/bulkexplorer53/?lang=en&id=EMP_TEMP_SEX_AGE_STE_NB_A) website for further details of the numbers shown below.
+
+<br></br>
+![](utilities/Picture1.png)
+<br></br>
 
 ###  Additional information
 
